--- a/package.json
+++ b/package.json
@@ -1,33 +1,30 @@
 {
   "name": "SADIYA_BOT",
-  "version": "2.0.7",
-  "description": "sadiya_bot WhatsApp bot created sadeesha With using Node.js",
+  "version": "1.0.5",
+  "description": "sadiya_bot has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️ ",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name SADIYA_BOT",
+    "start": "pm2 start index.js --deep-monitoring --attach --name sadeesha",
     "stop": "pm2 stop SADIYA_BOT",
     "restart": "pm2 restart SADIYA_BOT"
-  },
+ },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.6.0",
+    "@whiskeysockets/baileys": "6.7.8",
     "@adiwajshing/keyed-db": "^0.2.4",
     "pino": "^7.0.5",
     "pm2": "^5.2.0",
     "util": "^0.12.4",
     "express": "latest",
     "axios": "^1.2.5",
-    "file_size_url": "^1.0.6",
+    "file_size_url": "^1.0.4",
     "fs-extra": "^11.1.0",
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
-    "megajs": "1.3.3",
+    "megajs": "^1.1.0",
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
-    "yt-search": "2.11.1",
-    "api-dylux": "1.8.5",
-    "google-tts-api":"2.0.2",
-    "wa-sticker-formatter":"4.4.4",
-    "ruhend-scraper":"8.0.3",
+    "yt-search":"2.12.1",
+    "api-dylux":"1.8.5",
     "cheerio" : "1.0.0",
     "g-i-s": "^2.1.7",
     "mfiredlcore-vihangayt": "^1.0.0",
@@ -36,10 +33,10 @@
     "@sl-code-lords/esana-news": "latest",
     "youtubedl-core": "^4.11.5",
     "moment-timezone": "latest",
-    "hirunews-scrap": "^1.1.3",
+    "hirunews-scrap": "^1.1.2",
     "google-tts-api":"2.0.2",
+    "wa-sticker-formatter":"4.4.4",
     "ytdl-core": "^4.11.5",
-    "xnxx-dl": "^1.0.4",
-    "mongoose":"8.8.2"
+    "@dark-yasiya/yt-dl.js": "latest"
   }
 }
