--- a/app.json
+++ b/app.json
@@ -1,26 +1,25 @@
 {
   "name": "SADIYA_BOT",
-  "description": "Javascript WhatsApp bot made by sadeesha hirushan",
+  "description": "SADIYA_BOT Whatsapp bot © create by sadeesha · · ·",
   "logo": "https://files.catbox.moe/stxzru.jpg",
   "keywords": ["bot"],
   "success_url": "/",
 
+    "stack": "container",
   "env": {
     "SESSION_ID": {
       "description": "Put the session-id here.",
-      "required": true
+      "required": true,
+      "value": ""
     },  
-
-    "ALIVE_IMG": {
-      "description": "Put your alive img here.",
-      "required": true
-    },
     
-    "ALIVE_MSG": {
-      "description": "Put your alive msg here.",
-      "required": true
-    },  
-"AUTO_VOICE": {
+    "MODE": {
+      "description": "select your bot work type public-private-inbox-group.",
+      "required": true,
+      "value": "public"
+    }, 
+
+    "AUTO_VOICE": {
       "description": "Make it true if you want bot auto voice.",
       "required": true,
       "value": "true"
@@ -36,9 +35,28 @@
       "description": "Make it true if you want bot auto sticker.",
       "required": true,
       "value": "true"
-    }   
+    }, 
+
+    "AUTO_READ_STATUS": {
+      "description": "Make it true if you want bot auto auto_read_status.",
+      "required": true,
+      "value": "true"
+    }, 
+    
+    "FAKE_RECORDING": {
+      "description": "Make it true if you want bot fake record.",
+      "required": true,
+      "value": "true"
+    },
+
+    "AUTO_REACT": {
+      "description": "Make it true if you want bot AutoReact.",
+      "required": true,
+      "value": "true"
+    }
+
 },
-  
+
      "buildpacks": [
         {
             "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
