--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "SADIYA_BOT",
-  "version": "1.0.5",
-  "description": "sadiya_bot has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️ ",
+  "version": "2.0.7",
+  "description": "SADIYA_BOT WhatsApp bot created Sadeesha With using Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name sadeesha",
+    "start": "pm2 start index.js --deep-monitoring --attach --name SADIYA_BOT",
     "stop": "pm2 stop SADIYA_BOT",
     "restart": "pm2 restart SADIYA_BOT"
- },
+  },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.7.8",
+    "@whiskeysockets/baileys": "6.6.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "pino": "^7.0.5",
     "pm2": "^5.2.0",
@@ -20,25 +20,17 @@
     "fs-extra": "^11.1.0",
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
-    "megajs": "^1.1.0",
+    "megajs": "1.3.3",
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
-    "yt-search":"2.12.1",
-    "api-dylux":"1.8.5",
-    "cheerio" : "1.0.0",
-    "g-i-s": "^2.1.7",
-    "mfiredlcore-vihangayt": "^1.0.0",
-    "@bochilteam/scraper": "latest",
-    "@sl-code-lords/si-subdl": "^1.1.1",
-    "@sl-code-lords/esana-news": "latest",
-    "youtubedl-core": "^4.11.5",
-    "moment-timezone": "latest",
-    "hirunews-scrap": "^1.1.2",
+    "yt-search": "2.11.1",
+    "api-dylux": "1.8.5",
     "google-tts-api":"2.0.2",
     "wa-sticker-formatter":"4.4.4",
-    "ytdl-core": "^4.11.5",
-    "@dark-yasiya/yt-dl.js": "latest",
     "ruhend-scraper":"8.0.3",
-    "child_process":"1.0.2"
+    "child_process":"1.0.2",
+    "@mrnima/tiktok-downloader":"1.0.0",
+    "@mrnima/facebook-downloader":"1.0.0",
+    "mrnima-moviedl":"1.0.0"
   }
 }
